frontend/pages/hosts/ManageHostsPage/components/HostsFilterBlock/_styles.scss
.hosts-filter-block {
  &__labels-active-filter-wrap {
    display: flex;
    align-items: center;
    margin-bottom: $pad-small;
    gap: $pad-small; // between multiple filter pills

    .form-field {
      // negate global .form-field {width: 100%} for use of Dropdown
      // and other "form-fields" in the filter block
      width: initial;
    }
  }

  // NOTE: Look more into this styling
  &__os_settings-dropdown,
  &__macsettings-dropdown {
    width: 137px;

    .Select-value {
      display: flex;
      align-items: center;

      &::before {
        position: relative;
        content: url(../assets/images/icon-filter-v2-black-16x16@2x.png);
        transform: scale(0.5);
        left: -8px;
        top: 4px;
      }
    }
  }
}

